# lira

./: .env.example  .gitignore  README.md  SPEC.md  seed.sql
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Cargo.toml  package-lock.json
backend/.claude/: settings.local.json
backend/migrations/: 001_projects.sql  002_sprints.sql  003_issues.sql  004_comments.sql  005_activity_logs.sql  006_issue_parent.sql  007_indexes.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs
backend/src/models/: issue.rs  mod.rs  project.rs  sprint.rs
backend/src/routes/: issues.rs  mod.rs  projects.rs  sprints.rs
backend/tests/: common.rs  issues.rs  projects.rs  sprints.rs
frontend/: lira-screenshot.mjs  lira-screenshot2.mjs  lira-screenshot3.mjs  lira-screenshot4.mjs  lira-screenshot5.mjs  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  issues.ts  projects.ts  sprints.ts
frontend/src/components/Board/: Board.tsx  BoardFilters.tsx  BurndownChart.tsx  Column.tsx  IssueCard.tsx
frontend/src/components/Issue/: IssueDetail.tsx  IssueForm.tsx
frontend/src/components/common/: Avatar.tsx  Badge.tsx  ConfirmDialog.tsx  (+3 more)
frontend/src/pages/: BacklogPage.tsx  BoardPage.tsx  DashboardPage.tsx  SearchPage.tsx  SprintHistoryPage.tsx  SprintPage.tsx
frontend/src/store/: index.ts
frontend/src/test/: Badge.test.tsx  Modal.test.tsx  Toast.test.tsx  extractErrorMessage.test.ts  setup.ts
frontend/src/types/: index.ts
